--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ Jinja2==3.1.2
 jsonschema==4.16.0
 MarkupSafe==2.1.1
 more-itertools==8.14.0
-numpy==1.21.6
+numpy>=1.24.0
 packaging==21.3
 pandas==1.3.5
 Pillow==9.2.0
