--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
+PyYAML>=6.0
 regex==2022.9.13
 requests==2.28.1
 rich==12.5.1
@@ -62,3 +62,7 @@ validators==0.20.0
 watchdog==2.1.9
 whisper==3.0.0
 zipp==3.8.1
+build-essential
+libssl-dev
+libffi-dev
+python3-dev
